Fix slight grammar Issue

--- a/posts/CourseSelection.mdx
+++ b/posts/CourseSelection.mdx
@@ -84,7 +84,7 @@ This unfortunately gave me Chemistry, Grade 12 Physics, Advanced Functions (AP) 
 
 Thankfully mentally I was still happy and doing well, and in my second semester I did much better, achieving my first 99% in a grade 11 course.
 
-Here is where I thought the quality of teaching and grading got much better, apart from ICS3U1 teacher I thought all my teachers were for once truly passionate about the subject they taught and they truly helped me a ton. I would also say that I found Computer Engineering quite fun, however, depending on your teacher you may want to avoid this course.
+Here is where I thought the quality of teaching and grading got much better, apart from my ICS3U1 teacher I thought all my teachers were for once truly passionate about the subject they taught and they truly helped me a ton. I would also say that I found Computer Engineering quite fun, however, depending on your teacher you may want to avoid this course.
 
 I will also add that you should do some research and see which teachers are good and which are bad, this can make a huge difference in reflecting your true grades and understanding of the course. Some teachers just don't care and will look for any reason to give you a bad grade, this was dully noted when one of my teachers took off a full mark out of a 12 mark project for not using 3 spaces instead of 2 to separate some output (They then refused to answer my emails about it). They finally caved in at the end of the year saying they would change it but since this was exam review day they never changed the mark.
 
