--- a/posts/SpotifyMacroboard.mdx
+++ b/posts/SpotifyMacroboard.mdx
@@ -1,7 +1,7 @@
 ---
-title: An ECE1A Review
-description: A review of my ECE1A term at the University of Waterloo.
-tags: university, ece
+title: Designing a Custom Spotify Macro Keyboard
+description: Controlling music seamlessly while maintaining aesthetics and functionality can be a challenge—especially when using compact keyboards. This inspired me to create a custom Spotify Macro Keyboard that combines functionality, dynamic lighting, and modern design principles.
+tags: software, hardware
 ---
 
 <iframe
