--- a/posts/SpotifyMacroboard.mdx
+++ b/posts/SpotifyMacroboard.mdx
@@ -1,5 +1,5 @@
 ---
-title: Designing a Custom Spotify Macro Keyboard
+title: Macro Keyboard
 description: Controlling music seamlessly while maintaining aesthetics and functionality can be a challenge—especially when using compact keyboards. This inspired me to create a custom Spotify Macro Keyboard that combines functionality, dynamic lighting, and modern design principles.
 tags: software, hardware
 ---
