--- a/posts/ECE1A.mdx
+++ b/posts/ECE1A.mdx
@@ -4,13 +4,13 @@ description: A review of my ECE1A term at the University of Waterloo.
 tags: university, ece
 ---
 
-I completed my first term (1A) in Computer Engineering at Waterloo and here are some of my thoughts on the major as a hwole, this post was heavily inspired by [Xierumeng](https://xierumeng.github.io/blog/3-2) and [Jordyn Mindorff](https://mindorff.ca/uw-ece-1a-review-fall-2023/), both of which wrote similar posts on their 1A experience.
+I completed my stream 4 1A term in Computer Engineering at Waterloo and here are some of my thoughts on the major as a hwole, this post was heavily inspired by [Xierumeng](https://xierumeng.github.io/blog/3-2) and [Jordyn Mindorff](https://mindorff.ca/uw-ece-1a-review-fall-2023/), both of which wrote similar posts on their 1A experience.
 
 ---
 
 ## Courses
 
-I think as a major, Computer Engineering is not all that difficult, the content is definitely challenging, but everything is comprehendable. What I think makes ECE challenging compared to other majors is simply the courseload. In our 1A we have a total of 7 courses (2 are worth 0.25 credits as opposed to our regular 0.5) which all have their own combination of labs (sometimes), assignments, and written assessments/projects.
+I think as a major, Computer Engineering is not all that difficult, the content is definitely challenging, but everything is comprehendable. What I think makes ECE challenging compared to other majors is simply the courseload. In our 1A we have a total of 7 graded courses (2 are worth 0.25 credits as opposed to the regular 0.5 along with quite a few nomark courses) which all have their own combination of labs (sometimes), assignments, and written assessments/projects.
 
 This paired with the fact we have a relatively stressful co-op search plus many other minor courses/things to complete makes the major as a whole difficult.
 
@@ -22,11 +22,11 @@ In any case, here are my general thoughts on all the courses that were taken in 
 
 I'll start with the fact that this in my opinion, was the hardest course in 1A. Though the midterm average was technically lower than our ECE150 midterm (Fundamentals of Programming), it was definitely harder for me.
 
-I think I struggled heavily with this course for 2 reasons, for one, you will have no resources. You can expect to never have answers, or at most, have an occasional value if the question asks for that over a generalized formula. Though there is a textbook, it's quite long, and there are few questions that match the difficulty you can expect to see on quizzes/exams. Even then, only the odd numbered questions will have answers, and no questions will have full solutions. This means that you'll end up just having to trust you did everything right if you don't want to directly confirm with your professor.
+I think I struggled heavily with this course for 2 reasons, for one, you will have no resources. You can expect to never have answers, or at most, have an occasional value if the question asks for that over a generalized formula. Though there is a textbook, it's quite long, and there are few questions that match the difficulty you can expect to see on quizzes/exams. Even then, only the odd numbered questions will have answers, and no questions will have full solutions. This means that you'll end up just having to trust you did everything right if you can't confirm with your professor in person/on Piazza.
 
 You could try asking the TA's as well, but that also seems to be a hit or miss. It was painfully obvious that my TA was never prepared, nor could he answer any questions. He was finally removed from the course a few days before finals, which was much too late.
 
-You will also have to buy a code for Mastering Physics which is a platform that you will use to complete your homework. I thought it was a massive scam since it's literally just a platform to put questions on and automatically grade your final numerical/symbolic answer, and a presentation by one of their representatives only confirmed this. In any case, this will be one of the harder courses of the term, so don't worry if you're not doing as well as you'd hope.
+You will also have to buy a code for Mastering Physics which is a platform that you will use to complete your homework. I thought it was a massive scam since it's literally just a platform to put questions on and automatically grade your final numerical/symbolic answer. A presentation by one of their representatives only confirmed this. In any case, this will be one of the harder courses of the term, so don't worry if you're not doing as well as you'd hope.
 
 ---
 
@@ -52,7 +52,7 @@ Taking a step back I think the low grades are partly due to overconfidence in a 
 
 ---
 
-### COMMST 192 Communication in the Engineering Profession - Dr. Steven Ryder (Prefers to be addressed as Steven)
+### COMMST 192 Communication in the Engineering Profession - Dr. Steven Ryder
 
 This course was interesting but unfortunately in the grand scheme of things I think a bit of a waste of time. Though a lot of the conversations and practice in public speaking here was invaluable, I think that this could've easily been achieved in half the time. I want to make it clear this was in no way the fault of the professor as I did enjoy talking a lot about some of the topics brought up in class. However, in the end, this time could've been spent on more important topics within ECE.
 
@@ -66,7 +66,7 @@ In addition, this course does not provide any help as to how to actually program
 
 In addition, I think this course is extremely disorganized, as you get further into the content and what everything actually says, everything is subjective and purely based on the TA's opinion. There are many typos, as well as content that literally have notes saying that they need to be removed in the future. The TA's also seemed to vary heavily especially in terms of grading, expectations, and just overall helpfulness. 
 
-I think my primary issue with this course is also that the majority of your mark is based on pure writing and not actual ECE content. It will be around 95% reading and writing, and maybe 5% programming/hardware if you do end up deciding to finish the project. I think this course was a waste of time and definitely could've been done better.
+I think my primary issue with this course is also that the majority of your mark is based on pure writing and not actual ECE content. It will be around 95% reading and writing, and maybe 5% programming/hardware if you do end up deciding to finish the project (many didn't). I think this course was a waste of time and definitely could've been done better.
 
 ---
 
