--- a/posts/ECE1A.mdx
+++ b/posts/ECE1A.mdx
@@ -4,25 +4,37 @@ description: A review of my ECE1A term at the University of Waterloo.
 tags: university, ece
 ---
 
-I completed my stream 4 1A term in Computer Engineering at Waterloo and here are some of my thoughts on the major as a hwole, this post was heavily inspired by [Xierumeng](https://xierumeng.github.io/blog/3-2) and [Jordyn Mindorff](https://mindorff.ca/uw-ece-1a-review-fall-2023/), both of which wrote similar posts on their 1A experience.
+I recently completed my 1A term in Computer Engineering at Waterloo and here are some of my thoughts on the program.
+
+This post was inspired by [Xierumeng](https://xierumeng.github.io/blog/3-2), [Jordyn Mindorff](https://mindorff.ca/uw-ece-1a-review-fall-2023/), and many others who wrote similar posts on their CE 1A experience. To hopefully continue this tradition for future students, I've written this post to hopefully give you a better idea of what to expect here at Waterloo.
+
+![The University of Waterloo](https://i.imgur.com/5bbZ3AB.jpeg)
 
 ---
 
 ## Courses
 
-I think as a major, Computer Engineering is not all that difficult, the content is definitely challenging, but everything is comprehendable. What I think makes ECE challenging compared to other majors is simply the courseload. In our 1A we have a total of 7 graded courses (2 are worth 0.25 credits as opposed to the regular 0.5 along with quite a few nomark courses) which all have their own combination of labs (sometimes), assignments, and written assessments/projects.
+I think as a major, Computer Engineering is not as difficult compared to other majors content-wise.
 
-This paired with the fact we have a relatively stressful co-op search plus many other minor courses/things to complete makes the major as a whole difficult.
+The content is definitely challenging, but everything is comprehendable. What I think makes ECE challenging compared to other majors is simply the course load.
 
-In any case, here are my general thoughts on all the courses that were taken in 1A:
+In our 1A term alone we have a total of 7 graded courses, 2 are worth 0.25 credits as opposed to the regular 0.5. In addition you will have another few ungraded courses that you may be required to "take" (think WHMIS).
+
+These all have their own combination of labs (sometimes), assignments, and written assessments/projects.
+
+This paired with the fact we have a relatively stressful co-op search starting almost immediately after orientation plus many other minor courses/things to complete makes the program as a whole difficult.
+
+Here's a quick look at the general weekly schedule (faded out since this was taken after the term ended):
+
+![Weekly Schedule](https://i.imgur.com/nbmzvbf.png)
 
 ---
 
 ### ECE 105 Classical Mechanics - Dr. Kostadinka Bizheva
 
-I'll start with the fact that this in my opinion, was the hardest course in 1A. Though the midterm average was technically lower than our ECE150 midterm (Fundamentals of Programming), it was definitely harder for me.
+I'll start with the fact that this in my opinion, was the hardest course in 1A. Though the midterm average was higher than our ECE150 midterm (Fundamentals of Programming), mechanics was definitely *Harder* for me.
 
-I think I struggled heavily with this course for 2 reasons, for one, you will have no resources. You can expect to never have answers, or at most, have an occasional value if the question asks for that over a generalized formula. Though there is a textbook, it's quite long, and there are few questions that match the difficulty you can expect to see on quizzes/exams. Even then, only the odd numbered questions will have answers, and no questions will have full solutions. This means that you'll end up just having to trust you did everything right if you can't confirm with your professor in person/on Piazza.
+I think I struggled heavily with this course for 2 reasons, for one: you will have little resources. You can expect to never have answers, or at most, have an occasional value if the question asks for that over a generalized formula. Though there is a textbook, it's quite long, and there are few questions that match the difficulty you can expect to see on quizzes/exams. Even then, only the odd numbered questions will have answers, and no questions will have full solutions. This means that you'll end up just having to trust you did everything right if you can't confirm with your professor in person/on Piazza.
 
 You could try asking the TA's as well, but that also seems to be a hit or miss. It was painfully obvious that my TA was never prepared, nor could he answer any questions. He was finally removed from the course a few days before finals, which was much too late.
 
