Update the ECE1A blog

--- a/posts/ECE1A.mdx
+++ b/posts/ECE1A.mdx
@@ -28,57 +28,103 @@ Here's a quick look at the general weekly schedule (faded out since this was tak
 
 ![Weekly Schedule](https://i.imgur.com/nbmzvbf.png)
 
+### Academics
+A short note before I delve into each course: University is hard. You probably already knew that, but it's important to keep in mind that you will likely not be getting 100's in courses unless you're already extremely knowledgeable in the content. That's not to say that you can't do well, but expect your grades to drop somewhat significantly.
+
 ---
 
 ### ECE 105 Classical Mechanics - Dr. Kostadinka Bizheva
 
 I'll start with the fact that this in my opinion, was the hardest course in 1A. Though the midterm average was higher than our ECE150 midterm (Fundamentals of Programming), mechanics was definitely *Harder* for me.
 
-I think I struggled heavily with this course for 2 reasons, for one: you will have little resources. You can expect to never have answers, or at most, have an occasional value if the question asks for that over a generalized formula. Though there is a textbook, it's quite long, and there are few questions that match the difficulty you can expect to see on quizzes/exams. Even then, only the odd numbered questions will have answers, and no questions will have full solutions. This means that you'll end up just having to trust you did everything right if you can't confirm with your professor in person/on Piazza.
+In this course you go more in depth about the motion of objects, forces, and vectors. You can expect to see a lot of crazy exaggarated problems in this course that are not at all representative of what you'll see in real life, however you'll be expected to still generally solve them in a reasonable amount of time.
+
+I think I struggled heavily with this course for 2 reasons, for one: you will have little resources. You can expect to never have answers, or at most, have an occasional value if the question asks for that over a generalized formula. Though there is a textbook, it's quite long, and there are few questions (think 3-5) that match the difficulty you can expect to see on quizzes/exams.
+
+In addition, even with the textbook, only the odd numbered questions will have answers, and no questions will have full solutions. This means that you'll end up just having to trust you did everything right or go to office hours to check each and every question.
 
 You could try asking the TA's as well, but that also seems to be a hit or miss. It was painfully obvious that my TA was never prepared, nor could he answer any questions. He was finally removed from the course a few days before finals, which was much too late.
 
-You will also have to buy a code for Mastering Physics which is a platform that you will use to complete your homework. I thought it was a massive scam since it's literally just a platform to put questions on and automatically grade your final numerical/symbolic answer. A presentation by one of their representatives only confirmed this. In any case, this will be one of the harder courses of the term, so don't worry if you're not doing as well as you'd hope.
+Another thing I dislike about the course is that you have to buy a code for Mastering Physics which is a platform that you will use to complete your homework. 
+
+It's literally just a platform to put questions on and automatically grade your final numerical/symbolic answer. A presentation by one of their representatives only confirmed this. In any case, this will be one of the harder courses of the term, so don't worry if you're not doing as well as you'd hope.
+
+Dr. Bizheva was honestly fine as a lecturer, however she does go quite fast.
 
 ---
 
 ### MATH 115 Linear Algebra - Prof. Eddie Dupont
 
-I really enjoyed this course for a multitude of reasons, for one, it was ran extremely well. The teaching team was hands down one of, and if not, the best one for this term. You have access to a lot of resources, including a great set of course notes, python snippets demonstrating how we can actually apply what we learn, along with genuinely helpful tutorial sessions.
+I really enjoyed this course for a multitude of reasons, for one, it was ran extremely well. The teaching team was personally my favorite. You will have access to a lot of resources, including an amazing set of course notes, Python snippets demonstrating how we can actually apply what we learn, along with genuinely helpful tutorial sessions.
 
 The content itself is also very digestable and I think most students tend to enjoy the new kind of content that you may not have seen before.
+
+To Prof. Eddie Dupont, if you ever do read this, thanks for being a great prof.
+
+![Prof. Eddie Dupont](https://i.imgur.com/bdlG5N3.png)
 
 ---
 
 ### MATH 117 Calculus 1 - Dr. Lilia Krivodonova
 
-This was a pretty standard Calculus Course, AP Calc AB helped a bit but not overly so. There were lots of resources and you could always ask the professor/TA's for help. Dr. Krivodonova was ok in my opinion though I know many did not share the same sentiments.
+This was a pretty standard Calculus Course, AP Calc AB helped a bit but not overly so. There were lots of resources and you could always ask the professor/TA's for help.
+
+Dr. Krivodonova was ok in my opinion though I know many did not share the same sentiments.
+
+![Pi = 3?](https://i.imgur.com/0t0QkTu.png)
 
 ---
 
 ### ECE 150 Fundamentals of Programming - Dr. Werner Dietl
 
+In this course you will learn the basics of C++, along with a variety of basic algorithms and a few data structures.
+
 A lot of students did consider this course to be one of the harder ones as our midterm was similar to that of ECE105 (Classical Mechanics). Both averaged around a 60 but I believe from a pure content standpoint, ECE150 is much easier. If you have any programming experience this course is a breeze and you won't be doing much studying for it.
 
-Taking a step back I think the low grades are partly due to overconfidence in a lot of students. The content seems easy and it is, but being able to apply it trips a lot of people up and probably led to this. As for Dr. Dietl I thought he was fine as a lecturer however, he isn't as engaging as he could be and so a lot of students would end up skipping or just not paying attention in his lectures.
+Taking a step back I think the low grades are partly due to overconfidence in a lot of students. The content seems easy and it is, but being able to apply it trips a lot of people up and probably led to this.
+
+As for Dr. Dietl I thought he was fine as a lecturer however, he isn't as engaging as he could be and so a lot of students would end up skipping or just not paying attention in his lectures.
 
 ---
 
 ### COMMST 192 Communication in the Engineering Profession - Dr. Steven Ryder
 
-This course was interesting but unfortunately in the grand scheme of things I think a bit of a waste of time. Though a lot of the conversations and practice in public speaking here was invaluable, I think that this could've easily been achieved in half the time. I want to make it clear this was in no way the fault of the professor as I did enjoy talking a lot about some of the topics brought up in class. However, in the end, this time could've been spent on more important topics within ECE.
+This course is taught by a wide variety of professors, each who have their own style of teaching. They basically have all the control they want over the assignments and weightings so expect your experience to vary. You can treat this as an english course though.
+
+This course was interesting but unfortunately in the grand scheme of things I think a bit of a waste of time. Though a lot of the conversations and practice in public speaking here was invaluable, I think that this could've easily been achieved in half the time. 
+
+This was in no way the fault of the professor as I did enjoy talking a lot about some of the topics brought up in class. However, in the end, this time could've been spent on more important topics within ECE.
 
 ---
 
 ### ECE 198 Project Studio - David Lau
 
-I had high expectations for this course coming into 1A, from a short description I read online it genuinely seemed like a fun course where I could apply a lot of what I would learn and have learned from before. However, this was met with a lot of disappointment. For one, we're forced into a small scope in both what we can create as well as what we can create it with. Specifically, we're forced to make use of an STM32F401re Nucleo board along with a certain theme and no external libraries, I didn't have too many complaints about this however considering a good majority of students have limited experience with hardware already, this is a pretty daunting first project.
+In project studio you will be required to buy a kit with an STM32F401re Nucleo board, along with a variety of other components that you will need/use to complete whatever your project is. Here you'll build a project that is inline with a theme that is chosen prior to the start of the course. I believe our theme was Health and Wellness.
 
-In addition, this course does not provide any help as to how to actually program and use the STM32. The documentation linked is often quite long and just not helpful. I refuse to believe that any student, especially in ECE has the time to read through a 1100 page manual on the STM32. In fact, the only help you will get in this course comes from outside sources and events run by other organizations on campus.
+I had high expectations for this course coming into 1A, from a short description I read online it genuinely seemed like a fun course where I could apply a lot of what I would learn and have learned from before. 
 
-In addition, I think this course is extremely disorganized, as you get further into the content and what everything actually says, everything is subjective and purely based on the TA's opinion. There are many typos, as well as content that literally have notes saying that they need to be removed in the future. The TA's also seemed to vary heavily especially in terms of grading, expectations, and just overall helpfulness. 
+However, this was met with a lot of disappointment.
 
-I think my primary issue with this course is also that the majority of your mark is based on pure writing and not actual ECE content. It will be around 95% reading and writing, and maybe 5% programming/hardware if you do end up deciding to finish the project (many didn't). I think this course was a waste of time and definitely could've been done better.
+1. You will be forced into a small scope in both what we can create as well as what we can create it with. Specifically, you'll be forced to make use of an STM32F401re Nucleo board along with a certain theme and no external libraries.
+    - I didn't have too many complaints about this however considering a good majority of students have limited experience with hardware already, this is a pretty daunting first project.
+2. This course does not provide any help as to how to actually program and use the STM32, unless you think you have the time to read through an 1,100 page manual on the STM32. In fact, the only help you will get in this course comes from outside sources and events run by other organizations on campus.
+3. This course is extremely subjective, as you get further into the content and what everything actually says, everything is purely based on the TA's opinion. There are many typos, as well as content that literally have notes saying that they need to be removed in the future (they were supposed to be removed for our term).
+4. The TA's also seemed to vary heavily especially in terms of grading, expectations, and just overall helpfulness. There were many incidents in this course including a shouting match on the final demo day between a TA and students. 
+5. I think my primary issue with this course is also that the majority of your mark is based on pure writing and not actual ECE content. It will be around 90% reading and writing, and maybe 10% programming/hardware. This only depends on if you do end up deciding to finish the project (many didn't). I think this course was a waste of time and definitely could've been done better.
+
+David Lau was average? To be honest he was kind of quiet, he did seem at the very least knowledgeable, but he didn't speak too much.
+
+If you are interested in my group's project, we created a wireless messaging system that uses IR for communication.
+
+![LinkCom](https://i.imgur.com/B37hMbX.png)
+
+---
+
+### ECE 190 Engineering Profession & Practice - Dan Davidson
+
+This course is basically ethics in engineering and some simple engineering related topics. It's not at all difficult but it will definitely take up some time. Your final exam will just be around 60-100 multiple choice questions (I don't remember exactly how many).
+
+Dan Davidson was a good lecturer, he was engaging, however I didn't really enjoy the course as a lot of it is just common sense.
 
 ---
 
@@ -86,7 +132,7 @@ I think my primary issue with this course is also that the majority of your mark
 
 As Waterloo's main selling point, I had an interesting experinece with the co-op process. If you want to know the stats of my co-op application process:
 
-1. 250~ Applications on Waterloo Works
+1. 250~ Applications on Waterloo Works over 3 cycles
 2. 20~ External Applications
 3. 3 interviews
 
@@ -99,7 +145,7 @@ My official position is a Software Engineering Intern at a company based in San 
 ### General Advice
 
 1. Keep your resume short and sweet.
-A lot of students coming into their first year of University will often not have a lot of content or experience to put on their resume. Though I did have a bit, I made it my mission in the first two cycles to put as much down as I possibly could, filling every inch of my resume with text. However, I think this backfired as I ended up not getting a single interview for those two cycles. After sitting down and talking with a few upper years, I decided to instead focus on a specific set of skills and projects that I had, and to just keep everything as short and as simple as possible. This seemed to work since on the next 100 applications I sent out, I got 3 interviews, in which I got the offer for the position I have now.
+A lot of students coming into their first year of University will often not have a lot of content or experience to put on their resume. Though I did have a bit, I made it my mission in the first two cycles to put as much down as I possibly could, filling every inch of my resume with text. However, I think this backfired as I ended up not getting a single interview for those two cycles. After sitting down and talking with a few upper years, I decided to instead focus on a specific set of skills and projects that I had, and to just keep everything as short and as simple as possible. This seemed to work since on the next 80~ applications I sent out, I got 3 interviews, in which I got the offer for the position I have now.
 2. Apply to as many jobs as you can.
 You should be aiming to do as many applications as humanly possible, don't worry too much about the specifics and if you would want to work there, if you do end up getting an interview and you don't want to work there, you can always just decline the interview. I think generally you should be applying to 100 positions per cycle, just do around 10-20 every night for a bit and you'll be fine.
 3. Don't worry about others
