Revert "Use image tags"
This reverts commit 066b946bc87dbdbb0ffd737cecbe7d16b400436d.

--- a/posts/ECE1A.mdx
+++ b/posts/ECE1A.mdx
@@ -8,7 +8,7 @@ I recently completed my 1A term in Computer Engineering at Waterloo and here are
 
 This post was inspired by [Xierumeng](https://xierumeng.github.io/blog/3-2), [Jordyn Mindorff](https://mindorff.ca/uw-ece-1a-review-fall-2023/), and many others who wrote similar posts on their CE 1A experience. To hopefully continue this tradition for future students, I've written this post to hopefully give you a better idea of what to expect here at Waterloo.
 
-<img src="https://i.imgur.com/5bbZ3AB.jpeg" alt="The University of Waterloo" height="400" />
+![The University of Waterloo](https://i.imgur.com/5bbZ3AB.jpeg)
 
 ---
 
@@ -26,7 +26,7 @@ This paired with the fact we have a relatively stressful co-op search starting a
 
 Here's a quick look at the general weekly schedule (faded out since this was taken after the term ended):
 
-<img src="https://i.imgur.com/nbmzvbf.png" alt="Weekly Schedule" height="400" />
+![Weekly Schedule](https://i.imgur.com/nbmzvbf.png)
 
 ### Academics
 A short note before I delve into each course: University is hard. You probably already knew that, but it's important to keep in mind that you will likely not be getting 100's in courses unless you're already extremely knowledgeable in the content. That's not to say that you can't do well, but expect your grades to drop somewhat significantly.
@@ -61,7 +61,7 @@ The content itself is also very digestable and I think most students tend to enj
 
 To Prof. Eddie Dupont, if you ever do read this, thanks for being a great prof.
 
-<img src="https://i.imgur.com/bdlG5N3.png" alt="Prof. Eddie Dupont" height="400" />
+![Prof. Eddie Dupont](https://i.imgur.com/bdlG5N3.png)
 
 ---
 
@@ -71,7 +71,7 @@ This was a pretty standard Calculus Course, AP Calc AB helped a bit but not over
 
 Dr. Krivodonova was ok in my opinion though I know many did not share the same sentiments.
 
-<img src="https://i.imgur.com/0t0QkTu.png" alt="Pi = 3?" height="400" />
+![Pi = 3?](https://i.imgur.com/0t0QkTu.png)
 
 ---
 
@@ -116,7 +116,7 @@ David Lau was average? To be honest he was kind of quiet, he did seem at the ver
 
 If you are interested in my group's project, we created a wireless messaging system that uses IR for communication.
 
-<img src="https://i.imgur.com/B37hMbX.png" alt="LinkCom" height="400" />
+![LinkCom](https://i.imgur.com/B37hMbX.png)
 
 ---
 
@@ -153,4 +153,4 @@ I think a lot of students also tend to get caught up in the fact that a lot of o
 
 If you are interested in our co-op stats, you can check them out here:
 
-<img src="https://i.imgur.com/jVG2hYz.png" alt="Our Co Op Stats" height="400" />
+![Our Co Op Stats](https://i.imgur.com/jVG2hYz.png)
