Update how to solder

--- a/posts/HowToSolder.mdx
+++ b/posts/HowToSolder.mdx
@@ -10,7 +10,7 @@ Soldering is an extremely useful skill to have when working with electronics, it
 
 Before you even start soldering you should know some of the general risks.
 
-1. Soldering irons will get **extremely hot**, after all they literally have to melt a metal alloy to work. This means you should always be careful and **focused** when handling a soldering iron. I learned this the hard way after I got distracted and accidentally grabbed the hot end of the iron instead of the handle... Not fun.
+1. Soldering irons will get **extremely hot**, after all, they must melt a metal alloy to work. This means you should always be careful and **focused** when handling a soldering iron. I learned this the hard way after I got distracted and accidentally grabbed the hot end of the iron instead of the handle... Not fun.
 2. Leaded solder is **toxic**, you should always wash your hands after soldering and avoid touching your face or eating while soldering. If you are using lead-free solder you should still wash your hands after soldering but it is less of a concern.
 3. Fumes from soldering can be **toxic**, you should always solder in a well-ventilated area or use a fume extractor.
 
@@ -42,7 +42,7 @@ A great example of a good solder joint is shown below as well as common issues t
 3. **Overheating**: This is when you leave the iron on the pad for too long and end up damaging the pad or the component. This is usually caused by not being quick enough when soldering. To fix this, you can usually just remove the component and try again with a new component if the old one is damaged. Unfortunately if the pad is damaged or completely melted you will likely have to replace the entire board.
 4. **Overall Weak Connection**: This occurs when it seems as though the joint is properly connected and should be functioning as normal but isn't. This is usually caused when you don't apply enough solder but allow some of it to flow onto the pad. This creates a false positive where it seems like the pad is entirely soldered, when in reality it may only be 50-90% soldered. You can easily fix this by applying more solder onto the joint.
 
-## My Pro Tips
+## Tips
 
 Having soldered hundreds of boards and thousands of components I have learned a few fun tips that can hopefully make your time soldering much easier.
 
